# rekrutacja

./: docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/services/: dogFactsService.ts  favoriteService.ts
postgres/: Dockerfile
postgres/migrations/: 00_core_tables.sql
server/: Dockerfile  pyproject.toml
server/application/: app.py
server/application/blueprints/: dog_facts.py  favorite.py
server/application/database/: __init__.py  main.py
server/application/database/managers/: favorite.py
